compiler/tests/compile-fail/arity.arret
(import [stdlib base])

(defn not-enough-fixed (_) ())
(def _ (not-enough-fixed))
      ;^^^^^^^^^^^^^^^^^^ ERROR incorrect number of arguments: wanted 1, have 0

(defn not-enough-fixed-and-rest (_ & _) ())
(def _ (not-enough-fixed-and-rest))
      ;^^^^^^^^^^^^^^^^^^^^^^^^^^^ ERROR incorrect number of arguments: wanted at least 1, have 0

(defn too-many-fixed (_) ())
(def _ (too-many-fixed 1 2 3))
      ;^^^^^^^^^^^^^^^^^^^^^^ ERROR incorrect number of arguments: wanted 1, have 3

(def _ (bool?))
      ;^^^^^^^ ERROR incorrect number of arguments: wanted 1, have 0

(def _ (bool? true true))
      ;^^^^^^^^^^^^^^^^^ ERROR incorrect number of arguments: wanted 1, have 2

(defn apply-top-fun ([x (... -> Bool)])
  (x 5))
 ;^^^^^ ERROR cannot determine parameter types for top function type `(... -> Bool)`

 (defn apply-with-rest (_ [_ Int] _))
 (def _ (apply-with-rest & '(1 2)))
                           ;^^^^^ ERROR `(List Int Int)` is not a `(List Any Int Any)`
 (def _ (apply-with-rest & '(1 2 3 4)))
                           ;^^^^^^^^^ ERROR `(List Int Int Int Int)` is not a `(List Any Int Any)`

(defn main! ())